Перенести InterviewStatus в сервис mock #454